[gd_scene load_steps=11 format=3 uid="uid://7rng3jsdgwhx"]

[ext_resource type="Script" path="res://rewrite/level/level.gd" id="1_25vf3"]
[ext_resource type="Script" path="res://rewrite/level/level_generator.gd" id="1_pjm2a"]
[ext_resource type="Script" path="res://rewrite/units/units_container.gd" id="3_tg5mk"]
[ext_resource type="PackedScene" uid="uid://cikidu87xgf1b" path="res://rewrite/units/groups/unit_group.tscn" id="4_8u215"]
[ext_resource type="Script" path="res://rewrite/units/groups/opponent_group.gd" id="5_jct1v"]
[ext_resource type="AudioStream" uid="uid://htf2dsatqm6s" path="res://addons/jingles-steel_08.ogg" id="6_eirjd"]
[ext_resource type="Script" path="res://rewrite/ui/ui.gd" id="6_rd7dn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yhhqa"]
content_margin_left = 30.0
content_margin_top = 10.0
content_margin_right = 30.0
content_margin_bottom = 10.0
bg_color = Color(0.61013, 0.74, 0.4514, 1)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1mfmo"]
content_margin_left = 30.0
content_margin_top = 10.0
content_margin_right = 30.0
content_margin_bottom = 10.0
bg_color = Color(0.8785, 1, 0.73, 1)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sbd4a"]
content_margin_left = 30.0
content_margin_top = 10.0
content_margin_right = 30.0
content_margin_bottom = 10.0
bg_color = Color(0.733805, 0.89, 0.5429, 1)
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="Level" type="Node2D"]
script = ExtResource("1_25vf3")

[node name="LevelGenerator" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("1_pjm2a")

[node name="Units" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("3_tg5mk")

[node name="PlayerGroup" parent="Units" instance=ExtResource("4_8u215")]
unique_name_in_owner = true
team_color = Color(0.0980392, 0.0980392, 0.439216, 1)

[node name="OpponentGroup" parent="Units" instance=ExtResource("4_8u215")]
unique_name_in_owner = true
script = ExtResource("5_jct1v")
team = 1
team_color = Color(0.780392, 0.0823529, 0.521569, 1)
_other_side_of_board_y = 7

[node name="UI" type="CanvasLayer" parent="."]
unique_name_in_owner = true
script = ExtResource("6_rd7dn")

[node name="EndGameVBoxContainer" type="VBoxContainer" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -464.5
offset_top = -94.0
offset_right = 464.5
offset_bottom = 94.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 55
alignment = 1

[node name="WinnerLabel" type="Label" parent="UI/EndGameVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 24
theme_override_font_sizes/font_size = 112
text = "Player/Opponent"
horizontal_alignment = 1

[node name="NewGameButton" type="Button" parent="UI/EndGameVBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 68
theme_override_styles/focus = SubResource("StyleBoxFlat_yhhqa")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_1mfmo")
theme_override_styles/hover = SubResource("StyleBoxFlat_yhhqa")
theme_override_styles/pressed = SubResource("StyleBoxFlat_1mfmo")
theme_override_styles/normal = SubResource("StyleBoxFlat_sbd4a")
text = "Restart"

[node name="WinSound" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("6_eirjd")
volume_db = -6.0
bus = &"FX"

[connection signal="pressed" from="UI/EndGameVBoxContainer/NewGameButton" to="UI" method="_on_new_game_button_pressed"]
